refactor: enhance code clarity by simplifying method calls and centralizing error messages across services